--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    "org.junit.jupiter:junit-jupiter-api:5.8.1"
+    "org.junit.jupiter:junit-jupiter-engine:5.8.1"
+    "org.junit.jupiter:junit-jupiter-params:5.8.1"
+    "org.junit.platform:junit-platform-suite:1.8.1"
 }
-
 test {
     useJUnitPlatform()
+    enableAssertions = true
 }
